--- a/public/bower.json
+++ b/public/bower.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "homepage": "",
   "dependencies": {
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "chart.js": "^2.4.0"
   },
   "ignore": [
     "**/.*",
